--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,8 @@ html, body {
   margin: 0;
   border: 0;
   padding: 0;
-  background-color: #fff;
+  background-color: yellow;
+  color: blue
 }
 
 main {
